--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-VITE_API_URL=http://localhost:3000
-VITE_PUBLIC_API_URL=https://seal-over-the-wall-frontend.onrender.com
+ VITE_API_URL=http://localhost:3000
+VITE_PUBLIC_API_URL=https://seal-over-the-wall-backend.onrender.com
+DEV=false
+
